--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -61,3 +61,11 @@
 
 <p><a href="{% url 'post-list' %}">← Back to posts</a></p>
 {% endblock %}
+
+<p>Tags: 
+  {% for tag in post.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+  {% empty %}
+    No tags
+  {% endfor %}
+</p>
